# portfolio

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  create_admin.py  pyproject.toml  requirements.txt  seed_data.py
backend/alembic/: env.py
backend/alembic/versions/: 2026_06_04_9a6107482869_add_is_deleted_column_for_soft_deletes.py  2026_06_04_c3c9588624b1_initial_schema.py  2026_06_05_4f8298950e52_make_project_id_nullable.py  2026_06_05_a3b4c5d6e7f8_add_missing_indexes.py  2026_06_05_cac54d5918f9_add_is_active_to_project_github_metadata.py  2026_06_10_f1f9385888f2_add_indexes_and_constraints.py
backend/app/: main.py
backend/app/api/routes/: __init__.py  admin.py  auth.py  github.py  health.py  public.py
backend/app/core/: config.py  database.py  errors.py  security.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/models/: __init__.py  admin_user.py  analytics_events.py  base.py  certificates.py  contact_messages.py  educations.py  experiences.py  profile.py  project_github_metadata.py  project_skills.py  projects.py  seo_settings.py  skills.py  social_links.py  testimonials.py
backend/app/repositories/: __init__.py
backend/app/schemas/: auth.py  common.py  health.py  portfolio.py
backend/app/services/: github_service.py  portfolio_service.py
backend/tests/: conftest.py  test_admin_routes.py
docs/: api.md  architecture.md  database.md  deployment.md  workflows.md
frontend/: .gitignore  Dockerfile  README.md  next.config.mjs  package.json  (+1 more)
(+72 files in other folders)
